# did-peer-4

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: code-quality-check.yml  publish.yml  tests.yml
did_peer_4/: __init__.py  doc_visitor.py  input_doc.py  valid.py
tests/: __init__.py  test_did_peer_4.py  test_input_doc.py  test_readme_examples.py  test_valid.py
tests/examples/: 0.json  1.json  2.json  3.json  4.json  5.json
