[project]
name = "did-peer-4"
version = "0.1.4"
description = "An implementation of did:peer:4"
authors = [
    {name = "Daniel Bluhm", email = "dbluhm@pm.me"},
]
dependencies = [
    "base58>=2.1.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Apache-2.0"}

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=24.1.1",
    "ruff>=0.1.2",
    "pre-commit>=3.3.3",
    "pytest-cov>=4.1.0",
    "pytest-ruff>=0.2.1",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "did_peer_4"
module-root = ""

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstract"
]
precision = 2
skip_covered = true
show_missing = true

[tool.pytest.ini_options]
addopts = """
    --cov=did_peer_4 --cov-report=term-missing --cov-branch --cov-fail-under=85 --cov-context=test
    --doctest-glob README.md --ruff
"""
